--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <!-- Google SingIn -->
+
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id" content="999689691733-n8hd7ta6lekav3f51ina1khitml2m6gh.apps.googleusercontent.com">
+
 </head>
 <body class="fix-header card-no-border fix-sidebar">
   <!-- ============================================================== -->
@@ -57,6 +62,8 @@
     
     <!--Custom JavaScript -->
     <script src="assets/js/custom.js"></script>
+
+    
 
 </body>
 </html>
